--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,6 +5,7 @@ theme: ["PaperMod"]
 
 
 
+custom_css: ["css/custom.css"]
 enableInlineShortcodes: true
 enableRobotsTXT: true
 buildDrafts: false
@@ -55,8 +56,7 @@ params:
   hideAuthor: true
   defaultTheme: auto
   # disableThemeToggle: true
-  # don't turn headings into links
-  disableAnchoredHeadings: true
+  disableAnchoredHeadings: true   # don't turn headings into links
   ShowShareButtons: true
   ShareButtons: ["facebook", "reddit", "linkedin", "twitter"]
   ShowReadingTime: false
