--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -12,3 +12,7 @@ summaryLength = 0
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
+
+[services]
+  [services.googleAnalytics]
+    ID = 'G-GYZQRVE6LH'
