--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -9,10 +9,7 @@ defaultContentLanguage = "en"
 enableRobotsTXT = true
 paginate = 10
 summaryLength = 0
+googleAnalytics = "G-GYZQRVE6LH"
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
-
-[services]
-  [services.googleAnalytics]
-    ID = 'G-GYZQRVE6LH'
