--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -17,6 +17,8 @@ enableImageWebp = true
 # robots = ""
 fingerprintAlgorithm = "sha256"
 
+mainSections = ['posts']
+
 [header]
   layout = "basic" # valid options: basic, hamburger, hybrid, custom
   #logo = "images/logo.jpg"
