--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -50,7 +50,7 @@ mainSections = ['posts']
   invertPagination = false
   showReadingTime = true
   showTableOfContents = true
-  showTaxonomies = true
+  showTaxonomies = false # show tags & categories at the top of the article
   showWordCount = false
   showComments = false
   # sharingLinks = ["facebook", "x-twitter", "mastodon", "pinterest", "reddit", "linkedin", "email", "telegram", "line", "weibo"]
