--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -3,7 +3,7 @@ languageName = "English"
 languageDirection = "ltr"
 weight = 1
 
-title = "tuxtorials"
+title = "tuxtorials.com"
 # copyright = "Copy, _right?_ :thinking_face:"
 
 [params]
